[package]
edition = "2021"
name    = "esp32-s3-rust-no_std"
version = "0.1.0"

[[bin]]
name = "esp32-s3-rust-no_std"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "unstable", "psram"] }
esp-wifi = { version = "0.13.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "log",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
esp-println = { version = "0.13.1", features = ["esp32s3", "log"] }
log = "0.4.27"

#slint = { git = "https://github.com/slint-ui/slint.git", rev = "e7fb9a3" , default-features = false, features = [
#    "compat-1-2",
#] }
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
embedded-hal-bus = "0.3.0"
mipidsi = "0.9.0"
eeprom24x = "0.7.2"
embassy-executor    = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-sync        = "0.6.2"
embassy-time        = "0.4.0"
esp-backtrace = { version = "0.15.1", features = ["esp32s3", "exception-handler", "panic-handler", "println"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
static_cell         = { version = "2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
