[package]
edition = "2024"
name    = "esp32-s3-rust-no_std"
version = "0.1.0"

[[bin]]
name = "esp32-s3-rust-no_std"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
# Networking is now handled by esp-radio
embedded-io = "0.6.1"
esp-alloc = "0.9.0"
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable", "psram"] }
# WiFi dependencies for esp-hal 1.0.0 - using esp-radio
esp-radio = { version = "0.17.0", features = [
    "esp32s3",
    "wifi",
    "log-04",
] }
heapless = { version = "0.9.1", default-features = false }
# smoltcp is now handled by esp-radio
esp-println = { version = "0.16.1", features = ["log-04", "esp32s3"] }
log = "0.4.27"

#slint = { git = "https://github.com/slint-ui/slint.git", rev = "e7fb9a3" , default-features = false, features = [
#    "compat-1-2",
#] }
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
embedded-hal-bus = "0.3.0"
mipidsi = "0.9.0"
eeprom24x = "0.7.2"
embassy-executor    = "0.9.0"
embassy-sync        = "0.7"
embassy-time        = "0.5.0"
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println"
] }
esp-rtos            = { version = "0.2.0", features = ["esp32s3", "embassy"] }
static_cell         = { version = "2.1.1", features = ["nightly"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
