[package]
name = "esp32-s3-lcd-ev-board-embassy-conways-game-of-life"
version = "0.7.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"



# Empty workspace to avoid being part of parent workspace
[workspace]

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable", "psram"] }
#esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "611bdc6", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println"
] }
esp-println = { version = "0.16.1", features = ["log-04", "esp32s3"] }
log = { version = "0.4.28" }

esp-alloc = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.9.1"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
embedded-hal-bus = "0.3.0"
bevy_ecs = { version = "0.17.2", default-features = false }

# WiFi dependencies for esp-hal 1.0.0 - using esp-radio
esp-radio = { version = "0.17.0", features = [
    "esp32s3",
    "wifi",
    "log-04",
] }

# Slint UI dependencies for embedded use
slint = { version = "1.11.0", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",  # Required for no_std embedded environments
    "renderer-software",       # Software renderer for embedded displays
] }


# Network stack dependencies (may be needed for WiFi)
embassy-net = { version = "0.6.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = "0.6.1"

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

# Embassy dependencies
embassy-executor    = "0.9.0"
embassy-sync        = "0.7"
embassy-time        = "0.5.0"
esp-rtos            = { version = "0.2.0", features = ["esp32s3", "embassy", "esp-radio"] }
static_cell         = { version = "2.1.1", features = ["nightly"] }

[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp32-s3-box-3" ]

# esp32-s3-box-3 = [ "esp-bsp/esp32-s3-box-3", "esp-hal/psram" ]
esp32-s3-box-3 = [ "esp-hal/psram" ]

[build-dependencies]
slint-build = "1.11.0"
