[package]
edition = "2021"
name    = "esp32-s3-rust-embassy"
version = "0.1.0"

[[bin]]
name = "esp32-s3-rust-embassy"
path = "./src/main.rs"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.15.0", features = ["esp32s3", "exception-handler", "println"] }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "esp32s3",
  "log-04",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
esp-println = { version = "0.13.1", features = ["esp32s3", "log"] }
log = "0.4.27"
static_cell = "2.1.0"
cfg-if = "1.0.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

