[package]
edition = "2021"
name    = "esp32-s3-rust-embassy"
version = "0.1.0"

[[bin]]
name = "esp32-s3-rust-embassy"
path = "./src/main.rs"

[dependencies]
embassy-time = "0.5.0"
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
log = "0.4.27"
static_cell = "2.1.0"
esp-radio = { version = "0.17.0", features = ["esp-alloc", "esp32s3", "wifi"], default-features = false }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "embassy", "esp-radio"], default-features = false }
embassy-executor = "0.9.1"
esp-alloc = "0.9.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

